# foxspace

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  FoxSpaceConfig.cmake.in  LICENSE  README.md
.ci/: compile.bat  compile.ps1  compile.sh  test.bat  test.ps1  test.sh
.github/: dependabot.yml
.github/workflows/: clang-format-check.yml  codeql-analysis.yml  test-linux.yml  test-macos.yml  test-windows.yml
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt  show_informations.cpp
fox/: CMakeLists.txt  info.hpp.in  math.cpp  math.hpp  time.cpp  time.hpp
foxspace/: CMakeLists.txt  checks.cpp  checks.hpp  file.cpp  file.hpp  info.hpp.in  math.cpp  math.hpp  time.cpp  time.hpp
foxspace/private/: platform.hpp
tests/: CMakeLists.txt  math_test.cpp  time_test.cpp
